@@ -1,3 +1,7 @@
+2002-07-20  Wakaba <w@suika.fam.cx>
+
+	* Charset.pm (msname2iananame): New function.
+
 2002-07-13  Wakaba <w@suika.fam.cx>
 
 	* MediaType.pm (message/disposition-notification):
